# pytest-python-selenium-framework

./: .env  .gitignore  .ruff.toml  Dockerfile  LICENSE.md  README.md  conftest.py  properties.py  pyproject.toml  pytest.ini  requirements.txt  run_tests_butuntu.yaml  setup.py
.github/: run_test.yaml
.github/workflows/: Run_tests.yaml  clear_cache.yaml  lint.yaml  report.yaml  run_test.yaml  run_tests.yaml
config/: caps.yaml  data.yaml
core/: driver.py  driver_factory.py  driver_options.py  event_listener.py
driver/: driver_options.py
event/: event_listener.py
resources/: caps.yaml  chromedriver.sh
scraper/: chrome_scraper.py  os_checker.py  upload_driver.py
src/driver/: driver.py  driver_factory.py  driver_options.py
src/locators/: locators.py
src/pageobjects/: base_page.py
src/pageobjects/text/: fill_form.py
src/utils/: Locators.py  decrypt.py  driver.py  driver_factory.py  driver_options.py  driver_util.py  error_handler.py  event_listener.py  get_driver_platform.py  logger.py  properties.py  upload_driver.py  yaml_reader.py
tests/: base_test.py  test_main_page.py
tests/test_fill_form/: test_fill_form.py
utils/: decrypt.py  helpers.py  logger.py  yaml_reader.py
